<resources>
    <string name="app_name">ObjetConnecteApplication</string>
    <string name="ventilateur">Ventilateur</string>
    <string name="donnees">Données</string>
    <string name="temperature">Temperature: %1$.1f°C</string>
    <string name="humidite">Humidité: %1$.0f%%</string>
    <string name="ventilation_titre">Ventilation</string>
    <string name="eteinte">Éteinte</string>
    <string name="allume">Allumé</string>
    <string name="vitesse_titre">Vitesse</string>
    <string name="couleur_led_titre">Couleur LED</string>
    <string name="modifier_la_couleur">Modifier la couleur</string>
    <string name="temp_rature_titre">Température</string>
    <string name="temperature_type_f">°F</string>
    <string name="temperature_type_c">°C</string>
    <string name="horaire_delete_title">Suppression</string>
    <string name="horaire_delete_message">Êtes-vous sûr de vouloir supprimer cet horaire?</string>
    <string name="horaire_add_dialog_title">Ajouter un horaire</string>
    <string name="err_horaire_add_type">Veuillez sélectionner un type.</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="annuler">Annuler</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="quotidiennement_">Quotidiennement:</string>
    <string name="type_">Type:</string>
    <string name="heure_">Heure:</string>
    <string name="temperature_titre">Température</string>
    <string name="humidite_titre">Humidité</string>
    <string name="horaire">Horaire</string>
    <string name="programmations">Programmations</string>
    <string name="ajouter">Ajouter</string>
    <string name="configuration_led">Configuration LED</string>
    <string name="regles_de_couleur">Règles de couleur</string>
    <string name="eteint">Éteint</string>
    <string name="modifier">Modifier</string>
    <string name="actif">Actif</string>
    <string name="supprimer">Supprimer</string>
    <string name="choisir">Choisir</string>
    <string name="hh_mm">hh:mm</string>

    <string-array name="pref_fetch_values">
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
    </string-array>

    <string-array name="pref_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="type_horaire_array">
        <item>Allumé</item>
        <item>Éteindre</item>
    </string-array>
</resources>